# traj_opt

./: README.md
traj_opt/: CMakeLists.txt
traj_opt/config/: global_planning.rviz  global_planning.yaml
traj_opt/include/: iosqp.hpp
traj_opt/include/bernstein/: bezier_optimizer.hpp
traj_opt/include/geometry/: sfc_gen.hpp
traj_opt/include/misc/: visualizer.hpp
traj_opt/include/polynomial/: gcopter.hpp  minco.hpp  poly_traj_utils.hpp  trajectory.hpp
traj_opt/launch/: minco.launch
traj_opt/src/: bezier_optimizer.cpp  minco_node.cpp  poly_traj_optimizer.cpp
traj_opt/test/: test_bezier_opt.cpp  vis_bezier_opt.cpp
traj_utils/: CMakeLists.txt
traj_utils/include/traj_utils/: bernstein.hpp  corridor.hpp  poly_traj.hpp  visualizer.hpp
traj_utils/msg/: BezierTraj.msg
traj_utils/src/: visualizer.cpp
